--- a/netbsd/chroot.html
+++ b/netbsd/chroot.html
@@ -12,7 +12,7 @@
 <body><div class="inner">
 <h1>chroot(8)を使ってホストから分離された環境を作る</h1>
 <hr>
-<p>コンテナ型の仮想化技術を利用したいとき、GNU/LinuxではDockerやLXC、FreeBSDではJailを利用することになります。一方NetBSDでコンテナを動かしたいのであれば<code>chroot(8)</code>をそのまま使わざるを得えません。</p>
+<p>コンテナ型の仮想化技術を利用したいとき、GNU/LinuxではDockerやLXC、FreeBSDではJailを利用することになります。一方NetBSDでコンテナを動かしたいのであれば<code>chroot(8)</code>をそのまま使わざるをえません。</p>
 
 <p>DockerではDockerfileをビルドしたコンテナイメージが様々なFLOSSプロジェクトから公式に提供されており、<code>docker pull</code>でダウンロードしてそのまま動かせます。Jailは<a href="https://github.com/iocage/iocage">iocage</a>に代表される便利な管理マネージャが存在します。これらのような便利なツールを使っていると<code>chroot(8)</code>をそのまま使うのはとても敷居が高いように思えます。しかし、NetBSDのBase Systemの展開と<code>pkg_add(1)</code>の<code>-P</code>オプション、<code>mount_null(8)</code>の使い方を把握しておけば、思い通りに<code>chroot(8)</code>コンテナイメージを構築できます。</p>
 
