--- a/netbsd/conoha.html
+++ b/netbsd/conoha.html
@@ -15,19 +15,19 @@
 <p>Google Cloud・AWS・Azure・……とクラウドの巨人を挙げればそれしかクラウドの選択肢がないようにも思えます。しかし以下の理由からNetBSDを開発・利用しているときにはあえて国内のVPSサービスを選ぶこともあります。</p>
 
 <dl>
-<dt>ビルドサーバとして運用したいのでCore数やRAMは多いほうがいい</dt>
+<dt><b>ビルドサーバとして運用したいのでCore数やRAMは多いほうがいい</b></dt>
 <dd>クラウドで下手に高性能なマシンを契約すると費用がかさみます。当然、マシンパワーが必要なときだけ高性能なマシンを契約して、作業が終われば即マシンを削除するという運用をすれば費用は比較的抑えられるでしょう。</dd>
 
-<dt>簡単な料金体系がいい</dt>
+<dt><b>簡単な料金体系がいい</b></dt>
 <dd>クラウドではネットワークの通信量やストレージにもお金がかかることもあります。日曜プログラマとしては、できれば複雑な料金体系のサービスは避けて明瞭会計なサービスを使いたいところです。</dd>
 
-<dt>公式にNetBSDをサポートしているサービスがいい</dt>
+<dt><b>公式にNetBSDをサポートしているサービスがいい</b></dt>
 <dd>各クラウドサービスごとにマシンイメージを手元で作ったり、ドライバの非対応に悩まされたりすることなく、NetBSDが標準で提供されていると趣味として始めやすく使いやすいです。</dd>
 
-<dt>PayPalアカウントを作りたくない</dt>
+<dt><b>PayPalアカウントを作りたくない</b></dt>
 <dd>国外の格安VPSサービスは支払いがPayPal経由に限られていることもあります。国内のサービスであればクレジットカードも使えます。</dd>
 
-<dt>日本語のドキュメントやサポートが充実しててほしい</dt>
+<dt><b>日本語のドキュメントやサポートが充実しててほしい</b></dt>
 <dd>この理由に説得力があるかどうかは別として、国外のサービスも日本語のドキュメントはかなり充実しています。一方で一部翻訳されていないドキュメントもあります。おおよその場合気にならないとは思いますが。</dd>
 </dl>
 
