Update top page

--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
 </ul>
 
 <h2 id="articles">Web Articles</h2>
-
-<ul>
-<li><a href="./introduction/index.html">Unix入門</a></li>
-
-<li id="netbsd">NetBSD
+<h3><a href="./introduction/index.html">Unix入門</a></h3>
+<h3 id="netbsd">NetBSD</h3>
 <ul>
 <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
@@ -46,22 +43,18 @@
 <li><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></li>
 <li><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 <li><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></li>
-</ul></li>
-
-<li id="coding">Coding
+</ul>
+<h3 id="coding">Coding</h3>
 <ul>
 <li><a href="./coding/html.html">私家版HTML Coding Style</a></li>
 </ul>
-</li>
-
-<li id="essay">Essay
+<h3 id="essay">Essay</h3>
 <ul>
 <li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
 <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
 <li><a href="./essay/pkgintro.html">GNU/LinuxとBSD Unixのパッケージ概観</a></li>
 <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
 </ul>
-</li></ul>
 
 <h2 id="papers">Papers and Presentations</h2>
 <ul>
