--- a/introduction/index.html
+++ b/introduction/index.html
@@ -27,7 +27,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
   <li>管理者向けソフトウェア
     <ol>
       <li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
-      <li>ファイアウォール&mdash;&mdash;npf</li>
+      <li><a href="./npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
       <li><a href="./clamav.html">アンチウイルス&mdash;&mdash;ClamAV&reg;</a></li>
     </ol>
   </li>
