--- a/introduction/index.html
+++ b/introduction/index.html
@@ -20,55 +20,29 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <p>本書は<a href="https://github.com/user340/www/tree/master/introduction">https://github.com/user340/www</a>リポジトリの一部で管理されています。どのファイルがいつどのように変更されたかを正確に見るにはGitのlogを参照してください。HTMLはWorld Wide Web Consortium（W3C）による<a href="https://www.w3.org/TR/2017/REC-html52-20171214/">HTML 5.2</a>に従って書かれ、そのmarkupは<a href="https://validator.w3.org/">The W3C Markup Validation Service</a>にて確認しています。</p>
 
 <h2>目次</h2>
-<ol>
-  <li><a href="./intro.html"><b>はじめに</b></a></li>
-  <li>Unixコマンドラインの操作方法</li>
-  <li><a href="./install.html">OSのインストールと初期設定</a></li>
-  <li>管理者向けソフトウェア
-    <ol>
-      <li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
-      <li><a href="./npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
-      <li><a href="./clamav.html">アンチウイルス&mdash;&mdash;ClamAV&reg;</a></li>
-    </ol>
-  </li>
-  <li><a href="./desktop_howto.html">デスクトップ環境の作り方</a></li>
-  <li>一般ユーザ向けソフトウェア
-    <ol>
-      <li>デスクトップ環境
-        <ol>
-        <li>シェル&mdash;&mdash;zsh</li>
-        <li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
-        <li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
-        <li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
-        <li><a href="./ibus-mozc.html">インプットメソッド&mdash;&mdash;ibus-mozc</a></li>
-        <li><a href="./ricty.html">日本語フォント&mdash;&mdash;Ricty</a></li>
-        </ol>
-      </li>
-      <li>アプリケーション
-        <ol>
-        <li>Webブラウザ
-          <ol>
-            <li><a href="./w3m.html">CUI Webブラウザ&mdash;&mdash;w3m</a></li>
-            <li><a href="./firefox.html">GUI Webブラウザ&mdash;&mdash;Firefox</a></li>
-          </ol>
-        </li>
-        <li>メーラ
-          <ol><li><a href="./neomutt.html">CUIメーラ&mdash;&mdash;NeoMutt</a></li></ol>
-        </li>
-        <li>暗号化・パスワード管理
-          <ol>
-            <li>暗号化と署名&mdash;&mdash;GnuPG</li>
-            <li>パスワードマネージャ&mdash;&mdash;Password Store</li>
-          </ol>
-        </li>
-        </ol>
-      </li>
-    </ol>
-  </li>
-  <li>Unixとテキストファイル</li>
-  <li>シェルまたはPythonによるプログラミング</li>
-  <li><a href="./references.html">参考文献</a></li>
-  </ol>
+<ol><li><a href="./intro.html"><b>はじめに</b></a></li>
+<li><a href="./usage.html">Unixコマンドラインの操作方法</a></li>
+<li><a href="./install.html">OSのインストールと初期設定</a></li>
+<li>管理者向けソフトウェア<ol>
+<li><a href="./openssh.html">リモートログイン&mdash;&mdash;OpenSSH</a></li>
+<li><a href="./npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
+<li><a href="./clamav.html">アンチウイルス&mdash;&mdash;ClamAV&reg;</a></li></ol></li>
+<li><a href="./desktop_howto.html">デスクトップ環境の作り方</a></li>
+<li>一般ユーザ向けソフトウェア<ol>
+<li>デスクトップ環境<ol>
+<li><a href="./i3.html">ウィンドウマネージャ&mdash;&mdash;i3</a></li>
+<li><a href="./urxvt.html">仮想端末&mdash;&mdash;rxvt-unicode</a></li>
+<li><a href="./tmux.html">端末多重化&mdash;&mdash;tmux</a></li>
+<li><a href="./ibus-mozc.html">インプットメソッド&mdash;&mdash;ibus-mozc</a></li>
+<li><a href="./ricty.html">日本語フォント&mdash;&mdash;Ricty</a></li></ol></li>
+<li>アプリケーション<ol>
+<li>Webブラウザ<ol>
+<li><a href="./w3m.html">CUI Webブラウザ&mdash;&mdash;w3m</a></li>
+<li><a href="./firefox.html">GUI Webブラウザ&mdash;&mdash;Firefox</a></li></ol></li>
+<li>メーラ<ol><li><a href="./neomutt.html">CUIメーラ&mdash;&mdash;NeoMutt</a></li></ol></li></ol></li></ol></li>
+<li>Unixとテキストファイル</li>
+<li>シェルまたはPythonによるプログラミング</li>
+<li><a href="./references.html">参考文献</a></li></ol>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
