--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <h3 id="coding">Coding</h3>
 <ul>
 <li><a href="./coding/html.html">私家版HTML Coding Style</a></li>
+<li><a href="./coding/shellscript.html">私家版ShellScript Coding Style</a></li>
 </ul>
 <h3 id="essay">Essay</h3>
 <ul>
