--- a/coding/shellscript.html
+++ b/coding/shellscript.html
@@ -20,6 +20,8 @@
 <li><a href="#shellcheck">静的解析ツール ShellCheck</a></li>
 <li><a href="#indent">インデント・1行あたりの文字数</a></li>
 <li><a href="#function">関数名</a></li>
+<li><a href="#comment">コメント</a></li>
+<li><a href="#err">エラー処理</a></li>
 <li><a href="#posix">POSIX</a></li>
 </ul>
 
@@ -72,7 +74,9 @@ done
 # d</code></pre>
 
 <h2 id="indent">インデント・1行あたりの文字数</h2>
-<p>インデントはスペース4つ。1行あたり80文字で収めるよう努力します。ここで「努力する」と書いたのは、長い文字列を処理するときにどうしても80文字を超えてしまうこともあるからです。</p>
+<p>インデントはスペース4つです。Googleのスタイルでは2つですが、僕はインデントが浅すぎると目で見たときにソースコードの構造がはっきりと分からないので4つにしています。8つは長すぎました。</p>
+
+<p>コードは1行あたり80文字で収めるよう努力します。ここで「努力する」と書いたのは、長い文字列を処理するときにどうしても80文字を超えてしまうこともあるからです。1行に何百文字も書いてしまうと開発者の環境によっては文字が折り返しすぎてコードの見栄えが汚くなることもあります。</p>
 
 <p>パイプでコマンドの出力をつなげていくと80文字を超えてしまう場合もあります。そのときは複数行に分けて書きます。</p>
 
@@ -86,8 +90,10 @@ grep "Test" "test.txt" \
     | uniq
 </code></pre>
 
+<p>上記の例は各フィルタが短すぎて複数行に分ける利点がないかもしれませんが、ソースコード管理システムで差分をとったとき、どのフィルタをどのように変更したのかわかりやすくなります。</p>
+
 <h2 id="function">関数名</h2>
-<p>関数名はコマンド名との混同を避ける目的で接頭辞をつけます。たとえば"fn_", "_", "__"などです。</p>
+<p>関数名はコマンド名との混同を避ける目的で接頭辞をつけます。たとえば"fn_", "_", "__"などです。"_"から始まるコマンドは少なくともPOSIXで定義されたコマンド群には存在しません。特定の接頭辞を付けておけば、第三者がコードを読んだとき関数だとすぐに見分けられます。</p>
 
 <pre><code>#!/bin/sh
 fn_function()
@@ -103,6 +109,66 @@ _function()
 __function()
 {
     echo "prefix example"
+}</code></pre>
+
+<h2 id="comment">コメント</h2>
+<p>関数定義のさいは与えられる引数と期待する戻り値についてコメントを書きます。ShellScriptは読みにくいため、このようにコメントを書いておくとコードを読まなくても予期される動作を把握できます。</p>
+
+<pre><code>
+# _function -- Short description of the function
+#
+# Args:
+#   $1 filter pattern
+#
+# Return:
+#   filtered strings
+_function()
+{
+    # process ...
+}</code></pre>
+
+<h2 id="err">エラー処理</h2>
+<p>エラー処理は厳格におこないます。ShellScriptは他の高級なプログラミング言語よりも、どの箇所でエラーが発生したのか把握が難しいからです。ファイルを開くとき・ファイルを削除するとき・ディレクトリを移動するとき……などは必ずそのファイルやディレクトリが存在するかを<code>test(1)</code>で確認します。またコマンドの実行が成功・失敗したかどうかの判定はコマンドの戻り値を使います。</p>
+
+<p>エラーメッセージを表示して<code>exit 1</code>する関数を定義しておくと便利です。</p>
+
+<pre><code>#!/bin/sh
+# 現実的ではないが簡単な例
+
+# _bomb -- Show given error message then exit
+#
+# Args:
+#   error messages
+#
+_bomb()
+{
+    printf "%s\\n" "$@"
+    exit 1
+}
+
+dir="./path/to/directory"
+
+test -d "$dir" || _bomb "$dir: Not found"
+cd "$dir" || _bomb "cd $dir: failed"
+test -f "Makefile" || _bomb "$PWD/Makefile: Not found"
+make || _bomb "make: failed"</code></pre>
+
+<p>この<code>_bomb</code>という関数名はNetBSDのbuild.shから拝借しました。オリジナルの<code>bomb</code>は次のようになっています。</p>
+
+<pre><code>
+# Copyright (c) 2001-2011 The NetBSD Foundation, Inc.
+# All rights reserved.
+#
+# This is 2-Clause BSD License
+bomb()
+{
+  cat >&2 <<ERRORMESSAGE
+
+ERROR: $@
+*** BUILD ABORTED ***
+ERRORMESSAGE
+  kill ${toppid}    # in case we were invoked from a subshell
+  exit 1
 }</code></pre>
 
 <h2 id="posix">POSIX</h2>
