Add topic about conventions used in this page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="#log">Meet up log</a></li>
 <li><a href="#links">Links</a></li>
 <li><a href="#fingerprint">Fingerprint</a>
-<li><a href="#about">About</a></li>
+<li><a href="#conventions">Conventions Used in This Page</a></li>
 </ul>
 
 <h2 id="articles">Web Articles</h2>
@@ -87,12 +87,29 @@
 <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
 
 <h2 id="about">About</h2>
-
 <p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
 
 <p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはCC0で提供するものとします（PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題なさそうですが……）。</p>
 
 <p>内容は予告なく変更されます。正確な変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
+
+<h2 id="conventions">Conventions Used in This Page</h2>
+<p>このページでは以下の表記を使います。</p>
+
+<dl>
+<dt>太字（<b>Bold</b>）</dt>
+<dd>重要な用語や文章に対して使われます。</dd>
+<dt>斜体（<i>Italic</i>）</dt>
+<dd>英語の書籍名に対して使われます。</dd>
+<dt>等幅（<code>Constant Width</code>）</dt>
+<dd>ソースコード・コマンド・コマンドのオプション・変数・関数・クラス・属性・ファイル名・コマンドの出力・環境変数といった、プログラムやソフトウェアの要素を表すために使われます。</dd>
+<dt>等幅太字（<code><b>Constant Width</b></code>）</dt>
+<dd>ユーザが示されている文字通りに入力しなければならないコマンドやソースコード、ソースコード中で強調したい箇所に使われます。この表記は通常、角が丸い四角形で囲われます。</dd>
+</dl>
+
+<p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であろうとも、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
+
+<p>本表記ルールはO'Reilly Media, Inc.また株式会社オライリー・ジャパンから出版されている書籍のものを参考にしました。</p>
 
 <hr>
 <footer>
