--- a/introduction/intro.html
+++ b/introduction/intro.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-@media print, screen and (min-width:640px){ code{line-height:1.4;} b.root:before{content: "# ";} b.user:before{content: "$";} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
+@media print, screen and (min-width:640px){ code{line-height:1.4;} b.root:before{content: "# ";} b.user:before{content: "$ ";} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
 @media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;} code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
 </style>
 <title>e-yuuki.org</title>
@@ -20,7 +20,7 @@
 <h2 id="style">コマンドラインの表記</h2>
 <p>このページではコマンドライン上の操作を説明するとき、普通の文章と区別しやすくなるよう</p>
 
-<pre><code>$ ls</code></pre>
+<pre><code><b class="user">ls</b></code></pre>
 
 <p>のように黒線で囲い、コマンドライン上で操作していることを示すためにコマンドの先頭に"$ "か"# "を付けます。前者は一般ユーザ、後者は特権（root）ユーザで実行することを表します。</p>
 
@@ -28,13 +28,13 @@
 
 <p>黒線で囲われているテキストは必ずしもコマンドライン上の操作を表すとは限りません。たとえば</p>
 
-<pre><code>#include &lt;stdio.h&gt;
+<pre><code><b>#include &lt;stdio.h&gt;
 int
 main(void)
 {
         printf("Hello World\n");
         return 0;
-}</code></pre>
+}</b></code></pre>
 
 <p>1行目は"#"から始まっているがコマンドライン上の操作ではなくC言語の典型的なHello Worldです。これはテキストファイルの中身を表しています。黒線の中身の意味は文脈に応じて判断してください。</p>
 
@@ -46,11 +46,11 @@ main(void)
 
 <p>マニュアルページは</p>
 
-<pre><code>$ man printf</code></pre>
+<pre><code><b class="user">man printf</b></code></pre>
 
 <p>あるいはセクション番号を指定して</p>
 
-<pre><code>$ man 3 printf</code></pre>
+<pre><code><b class="user">man 3 printf</b></code></pre>
 
 <p>と実行することで閲覧できます。ページャ（pager）には通常<code>more(1)</code>か<code>less(1)</code>が使われますが、環境変数PAGERを設定して任意のページャを指定できます。</p>
 
