--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li><a href="./netbsd/buildbot.html">Buildbot on NetBSD</a></li>
 <li><a href="./netbsd/how_to_be_developer.html">NetBSD開発者になる方法</a></li>
 <li><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></li>
+<li><a href="./introduction/npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
 </ul>
 <h3 id="coding">Coding</h3>
 <ul>
