Update npf: Add blacklistctl

--- a/introduction/npf.html
+++ b/introduction/npf.html
@@ -95,6 +95,8 @@ ssh             stream  tcp6    *               *       3       24h</b></code></
 <pre><code><b class="root">npfctl reload</b>
 <b class="root">npfctl stop</b>
 <b class="root">npfctl start</b></code></pre>
+
+<p><code>blacklistd(8)</code>の状態は<code>blacklistctl dump -a</code>を実行すると確認できます。その他のオプションについてはオンラインマニュアル<code>blacklistctl(8)</code>を参照してください。</p>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
