Add OS Gallery into qemu haxm

--- a/introduction/usage.html
+++ b/introduction/usage.html
@@ -32,6 +32,8 @@
 <h2 id="path">絶対パスと相対パス</h2>
 <p>Unixのシステムはよくツリー状の構造になっていると言われます。頂点のルートディレクトリから枝が伸びているわけです。</p>
 
+<p>頂点のルートディレクトリから見たディレクトリやファイルの所在を「絶対パス」と呼びます。現在のディレクトリを「カレントディレクトリ」と呼びますが、そのカレントディレクトリから見たディレクトリやファイルの所在を「相対パス」と呼びます。</p>
+
 <h2 id="pwd">現在位置を確認する</h2>
 <h2 id="cd">ディレクトリを移動する</h2>
 <h2 id="ls">ディレクトリの中身を見る</h2>
