Update top page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-@media print, screen and (min-width:640px){code{line-height:1.4;} .inner{margin: auto auto; line-height:1.75; letter-spacing:0.05em;width:38em;text-align: justify; text-justify: inter-character; color: #333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}p{text-indent:1em;}}
-@media only screen and (max-width:640px){.inner{font-size:80%; margin:auto auto; line-height:1.75; letter-spacing:0.05em; width:25em; text-align:justify; text-justify: inter-character; color:#333333;} pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}code{font-size:70%; line-height:1.4;}}p{text-indent:1em;}
+@media print, screen and (min-width:640px){code{line-height:1.4;}.inner{margin: auto auto;line-height:1.75;letter-spacing:0.05em;width:38em;text-align:justify;text-justify:inter-character;color:#333333;}pre{padding-top:1em;padding-left:2em;padding-right:2em;padding-bottom:1em;line-height:0;border:solid 1px;border-radius:1em;white-space:pre-wrap;}p{text-indent:1em;}}
+@media only screen and (max-width:640px){.inner{font-size:80%;margin:auto auto;line-height:1.75;letter-spacing:0.05em;width:25em;text-align:justify;text-justify:inter-character;color:#333333;}pre{padding-top:1em;padding-left:2em;padding-right:2em;padding-bottom:1em;line-height:0;border:solid 1px;border-radius:1em;white-space:pre-wrap;}code{font-size:70%;line-height:1.4;}}p{text-indent:1em;}
 </style>
 <title>e-yuuki.org</title>
 </head>
@@ -13,22 +13,23 @@
 <h1>e-yuuki.org</h1>
 <hr>
 <ul>
-<li><a href="#articles">Web Articles</a>
+<li><a href="#articles">記事</a>
 <ul>
 <li><a href="./introduction/index.html">Unix入門</a></li>
 <li><a href="#netbsd">NetBSD</a></li>
-<li><a href="#coding">Coding</a></li>
-<li><a href="#essay">Essay</a></li>
+<li><a href="#coding">コーディング</a></li>
+<li><a href="#essay">エッセイ</a></li>
 </ul>
 </li>
-<li><a href="#papers">Papers and Presentations</a></li>
-<li><a href="#log">Meet up log</a></li>
-<li><a href="#links">Links</a></li>
-<li><a href="#fingerprint">Fingerprint</a>
-<li><a href="#conventions">Conventions Used in This Page</a></li>
+<li><a href="#papers">論文や発表資料</a></li>
+<li><a href="#log">コミュニティログ</a></li>
+<li><a href="#links">外部リンク</a></li>
+<li><a href="#fingerprint">フィンガープリント</a></li>
+<li><a href="#conventions">表記について</a></li>
+<li><a href="#about">このサイトについて</a></li>
 </ul>
 
-<h2 id="articles">Web Articles</h2>
+<h2 id="articles">記事</h2>
 <h3><a href="./introduction/index.html">Unix入門</a></h3>
 <h3 id="netbsd">NetBSD</h3>
 <ul>
@@ -44,12 +45,12 @@
 <li><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></li>
 <li><a href="./introduction/npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
 </ul>
-<h3 id="coding">Coding</h3>
+<h3 id="coding">コーディング</h3>
 <ul>
 <li><a href="./coding/html.html">私家版HTML Coding Style</a></li>
 <li><a href="./coding/shellscript.html">私家版ShellScript Coding Style</a></li>
 </ul>
-<h3 id="essay">Essay</h3>
+<h3 id="essay">エッセイ</h3>
 <ul>
 <li><a href="./essay/cc0code.html">CC0 HTMLコードを直す</a></li>
 <li><a href="./essay/work_life_barance.html">会社員とFLOSS趣味プログラマの両立について</a></li>
@@ -58,7 +59,7 @@
 <li><a href="./essay/practice_tdd.html">初めてのテスト駆動開発（TDD）と感想</a></li>
 </ul>
 
-<h2 id="papers">Papers and Presentations</h2>
+<h2 id="papers">論文や発表資料</h2>
 <ul>
 <li>Ken'ichi Fukamachi &amp; Yuuki Enomoto, <a href="./presentation/asiabsdcon2019/paper.pdf">Design and Implementation of NetBSD Base System Package Distribution Service</a>, AsiaBSDCon 2019</li>
 <li>Yuuki Enomoto, <a href="./presentation/asiabsdcon2019/bof.pdf">About Works and Interests</a>, AsiaBSDCon 2019 NetBSD BoF</li>
@@ -73,28 +74,23 @@
 <li>榎本優樹 &amp; 深町賢一, <a href="./presentation/fit2016/main.pdf"> Emmbedded NetBSDを生成するプログラムの展望</a>,情報処理学会, 第15回情報科学技術フォーラム, 2016</li>
 </ul>
 
-<h2 id="log">Meet up log</h2>
+<h2 id="log">コミュニティログ</h2>
 <ul>
 <li><a href="./community/FreeBSD_Workshop/index.html">FreeBSDワークショップ</a></li>
 </ul>
 
-<h2 id="links">Links</h2>
-<ul>
-<li>GitHub, <a href="https://github.com/user340">github.com/user340</a></li>
-<li>Amazon, <a href="http://amzn.asia/8Dd8gHg">Wish List</a></li>
-</ul>
+<h2 id="links">外部リンク</h2>
+<dl>
+<dt><a href="https://github.com/user340"><b>GitHub</b></a></dt>
+<dd>余暇で書いたコードはなるべくGitHubのリポジトリへpushすることにしています。</dd>
+<dt><a href="http://amzn.asia/8Dd8gHg"><b>Amazon Wish List</b></a></dt>
+<dd>Amazonの欲しいものリストです。</dd>
+</dl>
 
-<h2 id="fingerprint">Fingerprint</h2>
+<h2 id="fingerprint">フィンガープリント</h2>
 <pre><code>B684 4BF2 9CD4 961F 510A  8121 7B4D FF44 2348 20B8</code></pre>
 
-<h2 id="about">About</h2>
-<p>このページは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
-
-<p>このページに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはCC0で提供するものとします（PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題なさそうですが……）。</p>
-
-<p>内容は予告なく変更されます。正確な変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
-
-<h2 id="conventions">Conventions Used in This Page</h2>
+<h2 id="conventions">表記について</h2>
 <p>このページでは以下の表記を使います。</p>
 
 <dl>
@@ -111,6 +107,13 @@
 <p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であろうとも、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
 
 <p>本表記ルールはO'Reilly Media, Inc.また株式会社オライリー・ジャパンから出版されている書籍のものを参考にしました。</p>
+
+<h2 id="about">このサイトについて</h2>
+<p>このサイトは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
+
+<p>このサイトに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはパブリックドメイン（CC0）で提供するものとします。HTMLファイル内に記載されているコードはライセンスが明記されていない限り、HTMLファイルと同じくCC0で提供します。PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題ありません。</p>
+
+<p>内容は予告なく変更されます。正確な変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
 
 <hr>
 <footer>
