Add link to report of OSC

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <h2 id="log">コミュニティログ</h2>
 <ul>
 <li><a href="./community/FreeBSD_Workshop/index.html">FreeBSDワークショップ</a></li>
+<li><a href="./community/Open_Source_Conference/index.html">オープンソースカンファレンス</a></li>
 </ul>
 
 <h2 id="links">外部リンク</h2>
