--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<style>@media print,screen and (min-width:640px){code{line-height:1.4}img{max-width:100%}pre{padding-top:1em;padding-left:2em;padding-right:2em;padding-bottom:1em;line-height:0;border:solid 1px;border-radius:1em;white-space:pre-wrap}p{text-indent:1em}b.root:before{content:"# "}b.user:before{content:"$ "}.tiny{margin:auto auto;line-height:1.75;letter-spacing:.05em;width:38em;text-align:justify;text-justify:inter-character;color:#333}.referbox{margin:2em auto;padding:1em;width:100%}.referbox img{max-width:20%;float:left}.referbox p{font-size:90%}.referbox .text{margin:0 0 2em 0;width:80%;float:left}.colum{border:solid 1px;width:100%}.colum .title{font-weight:bold;text-align:center;padding:1em 0 2em 0}.colum .text{margin:auto auto;text-align:justify;width:35em;font-size:95%}}@media only screen and (max-width:640px){code{font-size:70%;line-height:1.4}img{max-width:100%}p{text-indent:1em}pre{padding-top:1em;padding-left:2em;padding-right:2em;padding-bottom:1em;line-height:0;border:solid 1px;border-radius:1em;white-space:pre-wrap}b.root:before{content:"# "}b.user:before{content:"$ "}.tiny{font-size:80%;margin:auto auto;line-height:1.75;letter-spacing:.05em;width:25em;text-align:justify;text-justify:inter-character;color:#333}.referbox{margin:2em auto;padding:1em;width:100%}.referbox img{max-width:20%;float:left}.referbox p{font-size:90%}.referbox .text{margin:0 0 2em 0;width:80%;float:left}.colum{border:solid 1px;width:100%}.colum .title{font-weight:bold;text-align:center;padding:1em 0 2em 0}.colum .text{margin:auto auto;text-align:justify;width:35em;font-size:95%}}</style>
+<link rel="stylesheet" type="text/css" href="/css/my.css">
 <title>e-yuuki.org</title>
 </head>
 <body><div class="tiny">
@@ -101,6 +101,15 @@
 <dt>等幅太字（<code><b>Constant Width</b></code>）</dt>
 <dd>ユーザが示されている文字通りに入力しなければならないコマンドやソースコード、ソースコード中で強調したい箇所に使われます。この表記は通常、角が丸い四角形で囲われます。</dd>
 </dl>
+
+<div class="referbox">
+  <img src="/icons/info.png" alt="info">
+  <div class="text"><p><b>参考情報</b></p><p>ヒントや参考情報、コメントを示します。</p></div>
+</div>
+<div class="referbox">
+  <img src="/icons/warn.png" alt="warn">
+  <div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
+</div>
 
 <p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であろうとも、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
 
