--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 </dl>
 
 <div class="referbox">
-  <img src="/icons/info.png" alt="info">
-  <div class="text"><p><b>参考情報</b></p><p>ヒントや参考情報、コメントを示します。</p></div>
+<img src="icons/info.png" alt="info">
+<div class="text"><p><b>参考情報</b></p><p>ヒントや参考情報、コメントを示します。</p></div>
 </div>
 <div class="referbox">
-  <img src="/icons/warn.png" alt="warn">
-  <div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
+<img src="icons/warn.png" alt="warn">
+<div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
 </div>
 
 <p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であろうとも、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
