--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 </dl>
 
 <div class="referbox">
-<img src="/icons/info.png" alt="info">
+<img src="./icons/info.png" alt="info">
 <div class="text"><p><b>参考情報</b></p><p>ヒントや参考情報、コメントを示します。</p></div>
 </div>
 
 <div class="referbox">
-<img src="/icons/warn.png" alt="warn">
+<img src="./icons/warn.png" alt="warn">
 <div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
 </div>
 
